--- a/index.html
+++ b/index.html
@@ -1,1 +1,207 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizza Hub</title>
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        /* Header */
+        header {
+            background-color: #ff6347; /* Tomato color */
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        header h1 {
+            font-size: 3rem;
+            font-family: 'Verdana', sans-serif;
+            letter-spacing: 2px;
+        }
+
+        /* Navigation */
+        nav {
+            background-color: #333;
+        }
+
+        nav ul {
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+        }
+
+        nav ul li {
+            list-style: none;
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.2rem;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: #ff6347;
+        }
+
+        /* Main Game Section */
+        .game-container {
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        .game-container h2 {
+            font-size: 2.5rem;
+            color: #333;
+            margin-bottom: 30px;
+        }
+
+        .games-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 0 10px;
+        }
+
+        .game {
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .game:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .game iframe {
+            width: 100%;
+            height: 400px;
+            border: none;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+        }
+
+        .game p {
+            padding: 15px;
+            font-size: 1.2rem;
+            color: #666;
+            background-color: #f4f4f4;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+
+        footer p {
+            margin-bottom: 5px;
+        }
+
+        footer a {
+            color: #ff6347;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        footer a:hover {
+            color: white;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .games-grid {
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Header Section -->
+    <header>
+        <h1>Pizza Hub</h1>
+        <p>Your Favorite Online Activity Collection</p>
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Top Games</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Game Section -->
+    <section class="game-container">
+        <h2>Featured Games</h2>
+        <div class="games-grid">
+            <!-- Game 1 -->
+            <div class="game">
+                <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game1.html"></iframe>
+                <p>Game 1 - Racing Thrill</p>
+            </div>
+
+            <!-- Game 2 -->
+            <div class="game">
+                <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game2.html"></iframe>
+                <p>Game 2 - Puzzle Mania</p>
+            </div>
+
+            <!-- Game 3 -->
+            <div class="game">
+                <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game3.html"></iframe>
+                <p>Game 3 - Adventure Quest</p>
+            </div>
+
+            <!-- Game 4 -->
+            <div class="game">
+                <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game4.html"></iframe>
+                <p>Game 4 - Shooter Mayhem</p>
+            </div>
+
+            <!-- Game 5 -->
+            <div class="game">
+                <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game5.html"></iframe>
+                <p>Game 5 - Strategy Pro</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Pizza Hub. All Rights Reserved.</p>
+        <p>Designed with ❤️ by <a href="#">Mocah</a></p>
+    </footer>
+
+</body>
+</html>
