--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Hub - Enjoy the Best Experiences</title>
+    <title>Pizza Hub - Discover Entertainment</title>
     <style>
         /* General Reset */
         * {
@@ -14,83 +14,94 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ff6347, #ffcc70); /* Gradient background */
+            background: linear-gradient(135deg, #ff6347, #ffcc70);
             color: #333;
             line-height: 1.6;
-            padding-bottom: 100px;
         }
 
         /* Header */
         header {
-            background: linear-gradient(135deg, #ff4b2b, #ff9068); /* Gradient header */
+            background: linear-gradient(135deg, #ff4b2b, #ff9068);
             color: white;
-            padding: 30px 0;
+            padding: 25px 15px;
             text-align: center;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
 
         header h1 {
-            font-size: 4rem;
+            font-size: 3rem;
             font-family: 'Verdana', sans-serif;
-            letter-spacing: 3px;
+            letter-spacing: 2px;
         }
 
         header p {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             font-family: 'Arial', sans-serif;
             opacity: 0.85;
         }
 
         /* Navigation */
         nav {
-            background-color: #222;
+            background-color: #333;
+            padding: 15px;
+            text-align: center;
         }
 
         nav ul {
             display: flex;
-            justify-content: center;
-            padding: 15px 0;
+            flex-direction: column;
+            gap: 10px;
         }
 
         nav ul li {
             list-style: none;
-            margin: 0 20px;
         }
 
         nav ul li a {
             color: white;
             text-decoration: none;
             font-size: 1.3rem;
-            font-weight: bold;
-            transition: color 0.3s;
+            padding: 10px 0;
+            display: block;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         nav ul li a:hover {
-            color: #ffcc70;
+            background-color: #ffcc70;
+            color: #333;
         }
 
-        /* Section Container */
+        /* Media Query for Desktop */
+        @media(min-width: 768px) {
+            nav ul {
+                flex-direction: row;
+                justify-content: center;
+            }
+        }
+
+        /* Content Section */
         .content-container {
-            padding: 50px 20px;
+            padding: 50px 15px;
             text-align: center;
             background-color: white;
-            margin: 40px 10px;
+            margin: 30px 10px;
             border-radius: 15px;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
         }
 
         .content-container h2 {
-            font-size: 3rem;
+            font-size: 2.5rem;
             color: #ff4b2b;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
         }
 
         .content-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: 1fr;
             gap: 30px;
         }
 
+        /* Content Item */
         .content-item {
             background-color: white;
             border-radius: 15px;
@@ -99,27 +110,27 @@
         }
 
         .content-item:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
+            transform: translateY(-5px);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
         }
 
         .content-item iframe {
             width: 100%;
-            height: 400px;
+            height: 300px;
             border: none;
             border-radius: 15px 15px 0 0;
         }
 
         .content-item p {
             padding: 20px;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             color: #555;
         }
 
         /* Comment Section */
         .comment-section {
-            margin-top: 60px;
-            padding: 20px;
+            margin-top: 50px;
+            padding: 25px;
             background-color: #f1f1f1;
             border-radius: 15px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
@@ -138,6 +149,7 @@
             border-radius: 10px;
             border: 1px solid #ccc;
             margin-bottom: 15px;
+            resize: vertical;
         }
 
         .comment-section button {
@@ -159,9 +171,8 @@
         footer {
             background-color: #222;
             color: white;
-            padding: 40px 0;
+            padding: 30px;
             text-align: center;
-            margin-top: 60px;
         }
 
         footer p {
@@ -177,6 +188,19 @@
         footer a:hover {
             color: white;
         }
+
+        /* Responsive Grid */
+        @media(min-width: 768px) {
+            .content-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media(min-width: 1024px) {
+            .content-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
     </style>
 </head>
 <body>
@@ -184,7 +208,7 @@
     <!-- Header Section -->
     <header>
         <h1>Pizza Hub</h1>
-        <p>Experience the Best Entertainment</p>
+        <p>Discover Entertainment and Experiences</p>
     </header>
 
     <!-- Navigation Bar -->
@@ -192,32 +216,31 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Trending</a></li>
-            <li><a href="#">Popular</a></li>
-            <li><a href="#">Discover</a></li>
+            <li><a href="#">Explore</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 
     <!-- Main Content Section -->
     <section class="content-container">
-        <h2>Highlights</h2>
+        <h2>Discover Highlights</h2>
         <div class="content-grid">
             <!-- Content 1 -->
             <div class="content-item">
                 <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game1.html"></iframe>
-                <p>Experience stunning visuals in this featured journey.</p>
+                <p>Engage in exciting experiences from wherever you are.</p>
             </div>
 
             <!-- Content 2 -->
             <div class="content-item">
                 <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game2.html"></iframe>
-                <p>Immerse yourself in a world full of creativity.</p>
+                <p>Relax and enjoy the best of entertainment.</p>
             </div>
 
             <!-- Content 3 -->
             <div class="content-item">
                 <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game3.html"></iframe>
-                <p>Challenge yourself with exciting new adventures.</p>
+                <p>Explore new adventures and thrilling challenges.</p>
             </div>
         </div>
     </section>
@@ -226,15 +249,15 @@
     <section class="comment-section">
         <h3>Leave a Comment</h3>
         <form id="commentForm">
-            <textarea id="commentText" placeholder="Share your thoughts..." rows="5"></textarea>
+            <textarea id="commentText" placeholder="Share your thoughts..." rows="4"></textarea>
             <button type="submit">Submit Comment</button>
         </form>
     </section>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Pizza Hub. All Rights Reserved.</p>
-        <p>Designed with ❤️ by mocah</p>
+        <p>&copy; 2024 Pizza Hub. Designed by mocah</p>
+        <p>Built with ❤️ for the community</p>
     </footer>
 
     <script>
