--- a/index.html
+++ b/index.html
@@ -3,295 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Hub - Discover Entertainment</title>
+    <title>Pizza Hub - Exciting Experiences & Entertainment</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-        /* General Reset */
-        * {
+        body {
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ff6347, #ffcc70);
+            background-color: #f4f4f4;
             color: #333;
-            line-height: 1.6;
         }
-
-        /* Header */
         header {
-            background: linear-gradient(135deg, #ff4b2b, #ff9068);
+            background-color: #ff6347;
             color: white;
-            padding: 25px 15px;
             text-align: center;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            padding: 1rem;
         }
-
-        header h1 {
-            font-size: 3rem;
-            font-family: 'Verdana', sans-serif;
-            letter-spacing: 2px;
-        }
-
-        header p {
-            font-size: 1.2rem;
-            font-family: 'Arial', sans-serif;
-            opacity: 0.85;
-        }
-
-        /* Navigation */
         nav {
             background-color: #333;
-            padding: 15px;
-            text-align: center;
+            color: white;
+            padding: 0.5rem;
         }
-
         nav ul {
+            list-style-type: none;
+            padding: 0;
             display: flex;
-            flex-direction: column;
-            gap: 10px;
+            justify-content: center;
         }
-
         nav ul li {
-            list-style: none;
+            margin: 0 1rem;
         }
-
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-size: 1.3rem;
-            padding: 10px 0;
-            display: block;
-            transition: background-color 0.3s, color 0.3s;
         }
-
-        nav ul li a:hover {
-            background-color: #ffcc70;
-            color: #333;
+        main {
+            max-width: 1200px;
+            margin: 2rem auto;
+            padding: 0 1rem;
         }
-
-        /* Media Query for Desktop */
-        @media(min-width: 768px) {
-            nav ul {
-                flex-direction: row;
-                justify-content: center;
-            }
-        }
-
-        /* Content Section */
-        .content-container {
-            padding: 50px 15px;
+        .hero {
+            background-image: url('https://example.com/pizza-background.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 400px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-align: center;
+            color: white;
+        }
+        .hero h1 {
+            font-size: 3rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+        }
+        .features {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 2rem;
+        }
+        .feature {
+            flex-basis: 30%;
             background-color: white;
-            margin: 30px 10px;
-            border-radius: 15px;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+            padding: 1rem;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
-
-        .content-container h2 {
-            font-size: 2.5rem;
-            color: #ff4b2b;
-            margin-bottom: 30px;
-        }
-
-        .content-grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 30px;
-        }
-
-        /* Content Item */
-        .content-item {
-            background-color: white;
-            border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .content-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
-        }
-
-        .content-item iframe {
-            width: 100%;
-            height: 300px;
-            border: none;
-            border-radius: 15px 15px 0 0;
-        }
-
-        .content-item p {
-            padding: 20px;
-            font-size: 1.2rem;
-            color: #555;
-        }
-
-        /* Comment Section */
-        .comment-section {
-            margin-top: 50px;
-            padding: 25px;
-            background-color: #f1f1f1;
-            border-radius: 15px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        .comment-section h3 {
-            font-size: 2rem;
+        .feature h2 {
             color: #ff6347;
-            margin-bottom: 20px;
         }
-
-        .comment-section textarea {
-            width: 100%;
-            padding: 15px;
-            font-size: 1.2rem;
-            border-radius: 10px;
-            border: 1px solid #ccc;
-            margin-bottom: 15px;
-            resize: vertical;
-        }
-
-        .comment-section button {
-            padding: 12px 20px;
-            background-color: #ff4b2b;
-            color: white;
-            font-size: 1rem;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .comment-section button:hover {
-            background-color: #ff9068;
-        }
-
-        /* Footer */
         footer {
-            background-color: #222;
+            background-color: #333;
             color: white;
-            padding: 30px;
             text-align: center;
-        }
-
-        footer p {
-            margin-bottom: 5px;
-        }
-
-        footer a {
-            color: #ffcc70;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        footer a:hover {
-            color: white;
-        }
-
-        /* Responsive Grid */
-        @media(min-width: 768px) {
-            .content-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        @media(min-width: 1024px) {
-            .content-grid {
-                grid-template-columns: repeat(3, 1fr);
-            }
+            padding: 1rem;
+            margin-top: 2rem;
         }
     </style>
 </head>
 <body>
-
-    <!-- Header Section -->
     <header>
         <h1>Pizza Hub</h1>
-        <p>Discover Entertainment and Experiences</p>
     </header>
-
-    <!-- Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Trending</a></li>
-            <li><a href="#">Explore</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#locations">Locations</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-
-    <!-- Main Content Section -->
-    <section class="content-container">
-        <h2>Discover Highlights</h2>
-        <div class="content-grid">
-            <!-- Content 1 -->
-            <div class="content-item">
-                <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game1.html"></iframe>
+    <main>
+        <section class="hero">
+            <h1>Delicious Pizza, Delivered to Your Door</h1>
+        </section>
+        <section class="features">
+            <div class="feature">
+                <h2>Exciting Experiences</h2>
                 <p>Engage in exciting experiences from wherever you are.</p>
             </div>
-
-            <!-- Content 2 -->
-            <div class="content-item">
-                <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game2.html"></iframe>
+            <div class="feature">
+                <h2>Best Entertainment</h2>
                 <p>Relax and enjoy the best of entertainment.</p>
             </div>
-
-            <!-- Content 3 -->
-            <div class="content-item">
-                <iframe src="https://github.com/silentalex1/pizzahub/blob/main/games/video%20games/game3.html"></iframe>
+            <div class="feature">
+                <h2>New Adventures</h2>
                 <p>Explore new adventures and thrilling challenges.</p>
             </div>
-        </div>
-    </section>
-
-    <!-- Comment Section -->
-    <section class="comment-section">
-        <h3>Leave a Comment</h3>
-        <form id="commentForm">
-            <textarea id="commentText" placeholder="Share your thoughts..." rows="4"></textarea>
-            <button type="submit">Submit Comment</button>
-        </form>
-    </section>
-
-    <!-- Footer Section -->
+        </section>
+    </main>
     <footer>
-        <p>&copy; 2024 Pizza Hub. Designed by mocah</p>
-        <p>Built with ❤️ for the community</p>
+        <p>&copy; 2024 Pizza Hub. All rights reserved.</p>
     </footer>
-
-    <script>
-        // Simple Comment Submit (Backend to be connected to server.js)
-        const form = document.getElementById('commentForm');
-        form.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const comment = document.getElementById('commentText').value;
-
-            if (comment.trim() === "") {
-                alert("Please write a comment!");
-                return;
-            }
-
-            try {
-                const response = await fetch('https://github.com/silentalex1/pizzahub/blob/main/backend/server.js', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ comment })
-                });
-
-                if (response.ok) {
-                    alert("Comment submitted successfully!");
-                } else {
-                    alert("Failed to submit comment.");
-                }
-            } catch (error) {
-                console.error("Error:", error);
-                alert("An error occurred while submitting your comment.");
-            }
-        });
-    </script>
-
 </body>
 </html>
