--- a/index.html
+++ b/index.html
@@ -3,119 +3,206 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Hub - Exciting Experiences & Entertainment</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Entertainment Hub</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        :root {
+            --primary-color: #1e1e2f;
+            --secondary-color: #f9f9f9;
+            --accent-color: #ff6347;
+        }
         body {
             font-family: 'Roboto', sans-serif;
-            line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f0f0;
             color: #333;
         }
         header {
-            background-color: #ff6347;
+            background-color: var(--primary-color);
             color: white;
-            text-align: center;
             padding: 1rem;
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
         }
-        nav {
-            background-color: #333;
-            color: white;
-            padding: 0.5rem;
+        .header-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .logo {
+            font-family: 'Playfair Display', serif;
+            font-size: 2rem;
         }
         nav ul {
             list-style-type: none;
             padding: 0;
             display: flex;
-            justify-content: center;
         }
         nav ul li {
-            margin: 0 1rem;
+            margin-left: 1.5rem;
         }
         nav ul li a {
             color: white;
             text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+        nav ul li a:hover {
+            color: var(--accent-color);
         }
         main {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 0 1rem;
+            padding-top: 80px;
         }
         .hero {
-            background-image: url('https://example.com/pizza-background.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://example.com/hero-background.jpg');
             background-size: cover;
             background-position: center;
-            height: 400px;
+            height: 600px;
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
             color: white;
         }
+        .hero-content {
+            max-width: 800px;
+        }
         .hero h1 {
-            font-size: 3rem;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            font-family: 'Playfair Display', serif;
+            font-size: 4rem;
+            margin-bottom: 1rem;
+        }
+        .cta-button {
+            background-color: var(--accent-color);
+            color: var(--secondary-color);
+            padding: 0.8rem 2rem;
+            font-size: 1.1rem;
+            text-decoration: none;
+            border-radius: 30px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        .cta-button:hover {
+            background-color: #ffc400;
+            transform: scale(1.05);
         }
         .features {
             display: flex;
-            justify-content: space-between;
-            margin-top: 2rem;
+            justify-content: space-around;
+            max-width: 1200px;
+            margin-top: 4rem;
+            padding: 0 1rem; 
         }
         .feature {
             flex-basis: 30%;
-            background-color: white;
-            padding: 1rem;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .feature h2 {
-            color: #ff6347;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
-        }
-    </style>
+            background-color: white; 
+            padding: 2rem; 
+            border-radius: 10px; 
+           box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+           transition: transform 0.3s ease; 
+           text-align:center; 
+       }
+       .feature:hover {
+           transform: translateY(-10px); 
+       }
+       .feature i {
+           font-size: 3rem; 
+           color: var(--primary-color); 
+           margin-bottom:.5rem; 
+       }
+       .gallery {
+           max-width:1200px; 
+           margin-top :4rem; 
+           padding :0 1rem; 
+       }
+       .gallery h2 { 
+           font-family:'Playfair Display', serif; 
+           text-align:center; 
+           font-size :2.5rem; 
+           margin-bottom :2rem; 
+       }
+       .gallery-grid { 
+           display:grid; 
+           grid-template-columns :repeat(auto-fit,minmax(250px,1fr)); 
+           gap :1rem; 
+       }
+       .gallery-item { 
+           overflow:hidden; 
+           border-radius :10px; 
+       }
+       .gallery-item img { 
+           width :100%; 
+           height :100%; 
+           object-fit :cover; 
+           transition :transform .3s ease; 
+       }
+       .gallery-item:hover img { 
+           transform :scale(1.05); 
+       }
+       footer { 
+           background-color :var(--primary-color); 
+           color:white; 
+           text-align:center; 
+           padding :2rem;  
+       }  
+   </style>
 </head>
 <body>
-    <header>
-        <h1>Pizza Hub</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#locations">Locations</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section class="hero">
-            <h1>Delicious Pizza, Delivered to Your Door</h1>
-        </section>
-        <section class="features">
-            <div class="feature">
-                <h2>Exciting Experiences</h2>
-                <p>Engage in exciting experiences from wherever you are.</p>
-            </div>
-            <div class="feature">
-                <h2>Best Entertainment</h2>
-                <p>Relax and enjoy the best of entertainment.</p>
-            </div>
-            <div class="feature">
-                <h2>New Adventures</h2>
-                <p>Explore new adventures and thrilling challenges.</p>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Pizza Hub. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+   <header>
+      <div class="header-content">
+         <div class="logo">Entertainment Hub</div>
+         <nav>
+             <ul>
+                 <li><a href="#home">Home</a></li>
+                 <li><a href="#games">Games</a></li>
+                 <li><a href="#events">Events</a></li>
+                 <li><a href="#community">Community</a></li>
+                 <li><a href="#contact">Contact</a></li>
+             </ul>
+         </nav>
+      </div>
+   </header>
+   <main>
+      <section class="hero">
+         <div class="hero-content">
+             <h1>Unleash Your Imagination</h1>
+             <a href="#explore" class="cta-button">Explore Now</a>
+         </div>
+      </section>
+      <section class="features">
+         <div class="feature">
+             <i class="fas fa-gamepad"></i>
+             <h2>Exciting Adventures</h2>
+             <p>Immerse yourself in thrilling adventures.</p>
+         </div>
+         <div class="feature">
+             <i class="fas fa-users"></i>
+             <h2>Join the Community</h2>
+             <p>Connect with fellow enthusiasts and share experiences.</p>
+         </div>
+         <div class="feature">
+             <i class="fas fa-trophy"></i>
+             <h2>Compete & Win</h2>
+             <p>Participate in exciting competitions and win rewards.</p>
+         </div>
+     </section>
+     <section class="gallery">
+         <h2>Experience the Excitement</h2>
+         <div class="gallery-grid">
+             <div class="gallery-item"><img src="https://example.com/image1.jpg" alt="Exciting Scene"></div>
+             <div class="gallery-item"><img src="https://example.com/image2.jpg" alt="Epic Battle"></div>
+             <div class="gallery-item"><img src="https://example.com/image3.jpg" alt="Adventure Awaits"></div>
+             <div class="gallery-item"><img src="https://example.com/image4.jpg" alt="Community Fun"></div>
+         </div>
+     </section>
+   </main>  
+   <footer>  
+      <p>&copy; 2024 Entertainment Hub. All rights reserved.</p>  
+   </footer>  
+</body>  
+</html>  
